# breast-ai

./: .gitignore  analyze_data.ipynb  encoding_maps.json  main.ipynb  pyproject.toml  requirements.txt
backend/: app.py
backend/services/: __init__.py
figures/: classification_report.txt
frontend/src/: App.tsx  types.ts
frontend/src/components/: PredictionDetails.tsx
model_v2/: best_model.pkl  svm.pkl
source-code/: GIAI_THICH_FEATURES.md  HƯỚNG_DẪN.md  QUY_TRINH_TRAINING.md  README.md
source-code/backend/: app.py
source-code/backend/services/: model_service.py
source-code/frontend/src/: App.css  App.tsx  types.ts
source-code/frontend/src/components/: PredictionDetails.tsx
source-code/model_v2/: decision_tree_best.pkl
